[package]
name = "zMesh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for zMesh P2P overlay network"

[dependencies]
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
rand.workspace = true
tracing.workspace = true
toml.workspace = true
bincode.workspace = true
zeroize = "1.7"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
sha2 = "0.10"
aes-gcm = "0.10"
ring = "0.17"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
generic-array = "0.14"
parking_lot.workspace = true
base32.workspace = true
crossbeam-queue.workspace = true
sha3.workspace = true

[dev-dependencies]
tokio-test.workspace = true
proptest.workspace = true