[package]
name = "zMesh-examples"
version = "0.1.0"
edition = "2021"
authors = ["zMesh Team"]
license = "MIT OR Apache-2.0"
description = "Examples for zMesh P2P overlay network"

[dependencies]
zMesh-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "ultimate_zMesh_example"
path = "ultimate_zMesh_example.rs"

[[example]]
name = "enhanced_mesh_example"
path = "enhanced_mesh_example.rs"