[package]
name = "zMesh-onion"
version = "0.1.0"
edition = "2021"
authors = ["zMesh Team"]
description = "Onion routing implementation for zMesh with 2-3 configurable hops and Perfect Forward Secrecy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zMesh/zMesh"

[dependencies]
# Core dependencies
zMesh-core = { path = "../core" }
zMesh-transport = { path = "../transport" }
zMesh-signaling = { path = "../signaling" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Cryptography
ring = "0.17"
rand = "0.8"
rand_core = "0.6"
x25519-dalek = { version = "2.0", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
generic-array = "0.14"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Collections
dashmap = "5.5"
indexmap = "2.1"

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
env_logger = "0.10"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["metrics"]

# Cryptographic algorithms
aes-gcm-crypto = []
chacha20-crypto = []

# Key exchange methods
x25519-kex = []
p256-kex = []

# Metrics and monitoring
metrics = ["prometheus"]

# Development features
dev = ["tokio/test-util"]
test-utils = []
bench = []

# Benchmarks can be added when benchmark files are created
# [[bench]]
# name = "onion_routing"
# harness = false
# required-features = ["bench"]