[package]
name = "zMesh-signaling"
version = "0.1.0"
edition = "2021"
authors = ["zMesh Team"]
description = "Signaling and peer discovery for zMesh"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zMesh/zMesh"

[dependencies]
# Core dependencies
zMesh-core = { path = "../core" }
zMesh-transport = { path = "../transport" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# WebRTC signaling
webrtc = { version = "0.7", optional = true }
webrtc-ice = { version = "0.9", optional = true }
webrtc-sdp = { version = "0.3", optional = true }

# WebSocket for signaling server
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
url = "2.4"

# HTTP client for REST signaling
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto for signaling security
ring = "0.17"
rustls = "0.21"
rustls-native-certs = "0.6"

# mDNS for local discovery
mdns = { version = "3.0", optional = true }

# DHT for distributed discovery
libp2p = { version = "0.53", features = ["kad", "mdns", "noise", "tcp", "websocket"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
test-log = "0.2"
env_logger = "0.10"

[features]
default = ["websocket-signaling", "rest-signaling", "local-discovery"]

# Signaling methods
websocket-signaling = []
rest-signaling = []
webrtc-signaling = ["webrtc", "webrtc-ice", "webrtc-sdp"]

# Discovery methods
local-discovery = ["mdns"]
dht-discovery = ["libp2p"]

# Development features
dev = ["tokio/test-util"]
test-utils = []