[package]
name = "zMesh-transport"
version = "0.1.0"
edition = "2021"
description = "Transport layer implementations for zMesh"

[dependencies]
zMesh-core = { path = "../core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# WebRTC
webrtc = "0.10"
webrtc-util = "0.8"
webrtc-data = "0.8"
webrtc-ice = "0.9"
webrtc-dtls = "0.7"

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
url = "2.4"

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
tracing = "0.1"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"

# Crypto for DTLS/TLS
ring = "0.17"
rustls = "0.21"
rustls-native-certs = "0.6"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = ["webrtc", "websocket"]
webrtc = []
websocket = []
test-utils = []